# AnkiAI

./: .gitignore
backend/: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yml  lefthook.yml  openapi.yaml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  content_agent.py
backend/app/api/: api.py  content_generation.py
backend/app/core/: config.py  container.py  dependencies.py
backend/app/schemas/: __init__.py
backend/app/tools/: __init__.py  text_to_speech.py
