[project]
name = "ankiai-backend"
version = "1.0.0"
description = "Backend API for AnkiAI flashcard application"
authors = [
    {name = "AnkiAI Team"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # FastAPI and ASGI server
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    # File uploads
    "python-multipart==0.0.6",
    # Configuration & Environment
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    # Validation & Serialization
    "email-validator==2.1.0",
    # Monitoring & Logging
    "structlog==23.2.0",
    # Google Cloud Text-to-Speech
    "google-cloud-texttospeech==2.16.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "httpx==0.25.2",

    # Development
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.12.0",

    # Git hooks
    "lefthook==1.13.0",

    # OpenAPI Generator
    "openapi-generator-cli==7.2.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]  # Explicitly specify the package to include only 'app'

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
